@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3059 utf-8
+personal_ws-1.1 en 3062 utf-8
 AAS
 ABI
 ACFAIL
@@ -1935,6 +1935,7 @@ gtk
 guardpend
 guardpstart
 guesstimate
+guesstimation
 guez
 gufw
 gui
